# Snake-game

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/src/: CMakeLists.txt  Food.cpp  Food.h  Screen.cpp  Screen.h  Snake.cpp  Snake.h
utils/: algorithmUtils.h
